handle blank string and null